src/test/resources/Parser/SyntaxErrors/ParameterizedTypeVariable.front
class A:
    f() {
        T : type = A;
        T<int32>;
    }